--- a/src/style.scss
+++ b/src/style.scss
@@ -295,8 +295,8 @@ $scroll-factor: 1;
       height: 100%;
       display: flex;
       align-items: center;
-      justify-content: center;
-      padding: 0 1rem;
+      // justify-content: center;
+      padding: 0px 300px;
     }
     
     .text-content {
@@ -310,25 +310,28 @@ $scroll-factor: 1;
       background: linear-gradient(to right, #38bdf8, #34d399);
       -webkit-background-clip: text;
       -webkit-text-fill-color: transparent;
-      font-size: 3rem;
-      font-weight: bold;
+      font-size: 60px;
+      font-weight: 600;
     }
     
     .text-content h1 span.block {
       display: block;
-      font-size: 2.5rem;
+      font-size: 55px;
+      font-weight: 600;
+      color: white;
     }
     
     .text-content p {
       margin-top: 1rem;
-      font-size: 1.125rem;
-      opacity: 0.8;
+      font-size: 20px;
+      opacity: 0.8 ;
     }
     
     .buttons {
       margin-top: 1.5rem;
       display: flex;
       gap: 1rem;
+      font-size: 18px;
       flex-wrap: wrap;
     }
     
@@ -362,10 +365,10 @@ $scroll-factor: 1;
     
     .floating-cube {
       position: absolute;
-      width: 300px;
-      height: 200px;
-      top: 40%;
-      right: 10%;
+      width: 400px;
+      height: 400px;
+      top: 47%;
+      right: 5%;
       transform-style: preserve-3d;
       z-index: 2;
     }
