--- a/src/style.scss
+++ b/src/style.scss
@@ -278,7 +278,7 @@ $scroll-factor: 1;
     
     .hero-container {
       position: relative;
-      height: 100vh;
+      // height: 100vh;
       background: linear-gradient(to bottom, #0f172a, #1e293b);
       overflow: hidden;
     }
@@ -296,7 +296,7 @@ $scroll-factor: 1;
       display: flex;
       align-items: center;
       // justify-content: center;
-      padding: 0px 300px;
+      // padding: 0px 300px;
     }
     
     .text-content {
