default style done on backend

--- a/src/style.scss
+++ b/src/style.scss
@@ -573,8 +573,8 @@ $scroll-factor: 1;
     }
     
     .right-card {
-      bottom: 15%;
-      right: -5%;
+      top: 65%;
+      left: 85%;
       transform: rotate(8deg);
     }
     
