parallax effect fixed on theme 5

--- a/src/style.scss
+++ b/src/style.scss
@@ -451,6 +451,7 @@ $scroll-factor: 1;
     }
     
     .container {
+      width: 90%;
       display: grid;
       gap: 4rem;
       grid-template-columns: 1fr 1fr;
@@ -647,6 +648,9 @@ $scroll-factor: 1;
       .hero-content{
         display: flex;
       }
+      .parallax-hero{
+        height: auto;
+      } 
       .image-section{
         margin-top: 0;
       }
