--- a/src/style.scss
+++ b/src/style.scss
@@ -414,7 +414,7 @@ $scroll-factor: 1;
       padding: 0;
     }
     
-    .parallax-hero {
+    .parallax-hero {      
       position: relative;
       height: 100vh;
       width: 100%;
@@ -422,7 +422,7 @@ $scroll-factor: 1;
       background: white;
     }
     
-    /* Background layers */
+    /* Background layers */ 
     .bg-layer {
       position: absolute;
       inset: 0;
@@ -540,7 +540,7 @@ $scroll-factor: 1;
     // @media (min-width: 768px) {
     //   .image-section {
     //     display: block;
-    //   }
+    //   }  
     // }
     
     .main-image {
@@ -644,11 +644,12 @@ $scroll-factor: 1;
       .container {
         display: grid;
         grid-template-columns: 1fr;
+        padding: 12px;
       }
       .hero-content{
         display: flex;
       }
-      .parallax-hero{
+      .parallax-hero{   
         height: auto;
       } 
       .image-section{
@@ -660,6 +661,7 @@ $scroll-factor: 1;
       .container {
         display: block;
         padding: 2.5rem 1rem;
+        width: 100%;
       }
       .hero-content{
         display: block;
