--- a/src/style.scss
+++ b/src/style.scss
@@ -477,7 +477,7 @@ $scroll-factor: 1;
     
     h1 {
       font-size: 3rem;
-      color: #111827;
+      // color: #111827;
       font-weight: 800;
       margin-bottom: 1rem;
       line-height: 1.2;
@@ -486,7 +486,7 @@ $scroll-factor: 1;
     .sub-title {
       font-size: 2.6rem;
       display: block;
-      color: #16a34a;
+      // color: #16a34a;
       font-weight: 800;
       margin-bottom: 1rem;
       line-height: 1.2;
