--- a/src/style.scss
+++ b/src/style.scss
@@ -678,7 +678,7 @@ $scroll-factor: 1;
   .bplScrolingParallax{
       margin: 0;
       font-family: Arial, sans-serif;
-      background: black;
+      background: rgb(124, 10, 255);
       color: white;
       overflow-x: hidden;
       position: relative;
@@ -837,7 +837,7 @@ $scroll-factor: 1;
       font-size: 28px;
       margin-bottom: 8px;
       font-weight: bold;
-    }
+    } 
     
     .modal-text p {
       font-size: 18px;
