--- a/src/style.scss
+++ b/src/style.scss
@@ -277,7 +277,7 @@ $scroll-factor: 1;
     .hero-container {
       position: relative;
       // height: 100vh;
-      background: linear-gradient(to bottom, #0f172a, #1e293b);
+      // background: linear-gradient(to bottom, #0f172a, #1e293b);
       overflow: hidden;
     }
 
@@ -343,24 +343,24 @@ $scroll-factor: 1;
     }
 
     .gradient-btn {
-      background: linear-gradient(to right, #38bdf8, #34d399);
-      color: white;
+      // background: linear-gradient(to right, #38bdf8, #34d399);
+      // color: white;
       border: none;
     }
 
-    .gradient-btn:hover {
-      background: linear-gradient(to right, #0ea5e9, #10b981);
-    }
+    // .gradient-btn:hover {
+    //   background: linear-gradient(to right, #0ea5e9, #10b981);
+    // }
 
     .outline-btn {
-      background: transparent;
+      // background: transparent;
       border: 1px solid rgba(255, 255, 255, 0.2);
-      color: white;
+      // color: white;
     }
 
-    .outline-btn:hover {
-      background: rgba(255, 255, 255, 0.05);
-    }
+    // .outline-btn:hover {
+    //   background: rgba(255, 255, 255, 0.05);
+    // }
 
     .floating-cube {
       position: absolute;
@@ -511,24 +511,24 @@ $scroll-factor: 1;
       align-items: center;
     }
 
-    .btn.primary {
-      background-color: #16a34a;
-      color: white;
-    }
+    // .btn.primary {
+    //   background-color: #16a34a;
+    //   color: white;
+    // }
 
-    .btn.primary:hover {
-      background-color: #15803d;
-    }
+    // .btn.primary:hover {
+    //   background-color: #15803d;
+    // }
 
     .btn.outline {
       border: 2px solid #bbf7d0;
-      color: #16a34a;
-      background: transparent;
+      // color: #16a34a;
+      // background: transparent;
     }
 
-    .btn.outline:hover {
-      background-color: #f0fdf4;
-    }
+    // .btn.outline:hover {
+    //   background-color: #f0fdf4;
+    // }
 
     /* Images */
     .image-section {
@@ -803,7 +803,6 @@ $scroll-factor: 1;
       position: relative;
       max-width: 900px;
       width: 100%;
-      background: #111;
       border-radius: 16px;
       padding: 24px;
       box-shadow: 0 12px 48px rgba(0, 0, 0, 0.6);
@@ -817,7 +816,7 @@ $scroll-factor: 1;
       top: 14px;
       right: 14px;
       background: transparent;
-      color: white;
+      // color: white;
       border: none;
       font-size: 38px;
       cursor: pointer;
@@ -829,7 +828,7 @@ $scroll-factor: 1;
 
     .modal-close:hover {
       transform: scale(1.15);
-      color: #ff4d4d;
+      // color: #ff4d4d !important;
     }
 
     /* ===== Image ===== */
@@ -859,6 +858,16 @@ $scroll-factor: 1;
       line-height: 1.5;
       opacity: 0.9;
       margin-bottom: 8px;
+    }
+
+    .btn{
+      outline: none;
+      border: none;
+      font-size: 16px;
+      padding: 6px 10px;
+      border-radius: 2px;
+      cursor: pointer;
+      transition: all 0.5s ease;
     }
 
     /* ===== Responsive Tweaks ===== */
