theme changer added on top

--- a/src/editor.scss
+++ b/src/editor.scss
@@ -1,10 +1,10 @@
 .labelProActive{
-  color: #4527A4 !important;
+  color: #146EF5 !important;
   background-color: #fff !important;
 }
 .labelPro {
   // background-color: #FFC107;
-  background-color: #4527A4 ;
+  background-color: #146EF5 ;
   margin-left: 5px;
   // color: #000;
   color: #fff ;
